# GIconFont

./: Makefile  README.md  browser.vala  gawesome.gresource.xml  main.c  meson.build  meson_options.txt
data/: awesome.conf  meson.build
docs/: gicon-font.xml  giconfont.xml  meson.build
example/: browser.vala  code.map  main.c  meson.build
gawesome/: debug.h  g-awesome.c  g-awesome.h  g.c  gawesome-priv.h  gawesome.c  gawesome.gresource.xml  gawesome.h  gawesome.i  meson.build  p.h  x
gawesome/resource/: a.c  a.out  fontawesome-webfont.ini  gawesome.gresource.xml  gen-priv.py  map  meson.build  zzz
gicon-font/: gicon-font.c  gicon-font.h  meson.build
gicon-font/resource/: fontawesome-webfont.map  giconfont.gresource.xml
giconfont/: giconfont.c  meson.build
giconfont/resource/: giconfont.gresource.xml
