option('builtin_fonts',
  type : 'boolean',
  value : true,
  description : 'Support for embedding ttf fonts to library')

option('docs',
  type : 'boolean',
  value : false,
  description: 'Enable generating the API reference (depends on GTK-Doc)')

option('introspection',
  type: 'boolean',
  value : false,
  description: 'Build with GObject Introspection support')

option('vapi',
  type: 'boolean',
  value: false,
  description: 'Build to generation vala vapi file')

# For subproject usage
option('package_subdir',
  type: 'string',
  description: 'Private sub-directory used when built as a subproject'
)
